Fixed some styling things to make links more visible

--- a/angular-app/src/app/takeinventory/takeinventory.component.css
+++ b/angular-app/src/app/takeinventory/takeinventory.component.css
@@ -12,3 +12,6 @@ input{
 	margin-bottom: 0rem;
 	margin-top: 0rem;
 }
+a {
+	color:blue !important
+}
